@@ -1,3 +1,7 @@
+2014-12-02  Richard Biener  <rguenther@suse.de>
+
+	* gcc.dg/torture/20141202-1.c: New testcase.
+
 2014-12-02  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR ipa/63814
